--- a/notebooks/cgrad.ipynb
+++ b/notebooks/cgrad.ipynb
@@ -20,7 +20,7 @@
    ],
    "source": [
     "using Plots\n",
-    "C(g::ColorGradient) = RGB[g[z] for z=linspace(0,1,30)]\n",
+    "C(g::ColorGradient) = RGB[g[z] for z=range(0,1,length=30)]\n",
     "g = :inferno"
    ]
   },
